ouput customer building info but is messy

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.@ViewBag.Message</p>
+    <p>@ViewBag.CustomerId</p>
+    <p>@ViewBag.CustomerBuilding</p>
+
 </div>
